# mdm-gcp

./: .gitignore  MDM_BATCH_PROCESSING.md  README.md  VECTOR_EMBEDDINGS_ARCHITECTURE.md  mdm_architecture.dot  mdm_architecture_3pt.dot  mdm_architecture_gcp.dot  mdm_unified_implementation.md  mdm_unified_matching.dot  presentation.md  presentation_batch_arch.md  presentation_github.md  pyproject.toml
batch_mdm_gcp/: MDM_BATCH_COMPARISON.md  MDM_BATCH_PROCESSING.md  MDM_BATCH_RESULTS.md  TECHNICAL_GLOSSARY.md  __init__.py  bigquery_utils.py  data_generator.py  mdm_batch_processing.ipynb  scalable_data_generator.py
batch_mdm_gcp/notebook/: mdm_batch_processing.ipynb
batch_mdm_gcp/spark_data_generator/: SPARK_MDM_PROCESSING.md  __init__.py  bq_data_duplicator.sql  requirements.txt  spark_data_generator.py  submit_job.sh
spark_mdm_gcp/: SPARK_MDM_PROCESSING.md  requirements.txt  setup.py  spark_data_generator.py  submit_job.sh
spark_mdm_gcp/examples/: basic_generation.sh  enterprise_scale.sh
streaming_mdm_gcp/: MDM_STREAMING_JOURNEY.md  MDM_STREAMING_PROCESSING.md  spanner_utils.py  streaming_mdm_processing.ipynb  streaming_processor.py
streaming_mdm_gcp/results/: streaming_transactions.csv
