[project]
name = "mdm-gcp"
version = "0.1.0"
description = "Master Data Management on Google Cloud Platform - Batch Processing Pipeline"
authors = [
    {name = "johanesalxd", email = "team@example.com"}
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",

    # Google Cloud Platform
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-aiplatform>=1.35.0",
    "google-auth>=2.22.0",
    "google-auth-oauthlib>=1.0.0",
    "db-dtypes>=1.1.0",

    # Machine Learning & Embeddings
    "vertexai>=1.35.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",

    # String matching and fuzzy logic
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.21.0",
    "jellyfish>=0.11.0",
    "phonetics>=1.0.5",

    # Data visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",

    # Jupyter and notebook support
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",

    # Utilities
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "faker>=19.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["batch_mdm_gcp"]
